@@ -1,5 +1,8 @@
 2007-12-01  Reiner Steib  <Reiner.Steib@gmx.de>
 
+	* gnus-art.el (gnus-article-browse-html-article): Mention
+	`mm-text-html-renderer' in the doc string.
+
 	* rfc2047.el (rfc2047-encode-max-chars): Refer to RFC 2047 in doc
 	string.  Add comments.
 
